# reshell

./: .gitignore  Cargo.toml  README.md  pixi.toml
.cursor/rules/: keep-docs-updated.mdc
.github/workflows/: ci.yml
docs/: DESIGN.md  IMPROVEMENTS.md  PROTOCOL.md  README.md
docs/internal/: README.md  design.md  improvements.md  protocol.md
recipe/: recipe.yaml
scripts/: update-version.sh
src/: client.rs  context.rs  history.rs  main.rs  picker.rs  protocol.rs  scrollback.rs  server.rs  session.rs  termstate.rs  vscode_si.rs
tests/: attach_race.rs  attach_restore.rs  cli_defaults.rs  cli_polish.rs  context_cmd.rs  history_files.rs  scrollback.rs  session_smoke.rs  switch_frees.rs  tui_flood.rs
tests/common/: mod.rs
