[package]
name = "reshell"
version = "2026.7.17+0"
edition = "2021"
license = "MIT"
description = "Keep shells alive across SSH disconnects with explicit attach/detach sessions"
authors = ["Amirhossein Davoody <amirhossein.davoody@gmail.com>"]

[[bin]]
name = "reshell"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
nix = { version = "0.29", features = [
    "fs",
    "ioctl",
    "poll",
    "process",
    "signal",
    "socket",
    "term",
    "user",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
